# global-career-radar

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
config/: company_watchlist.yaml  llm_prompt.txt  rules.yaml  search_profiles.yaml  settings.yaml
data/: job_intake.db  review.html  shortlisted_jobs.csv
docs/: architecture.md  telegram_digest.md
scripts/: run_pipeline.py
src/job_intake/: __init__.py  cli.py  filtering.py  pipeline.py
src/job_intake/adapters/: base.py  company_watchlist.py  dailyremote.py  factory.py  html_page.py
src/job_intake/alerts/: __init__.py  digest.py  telegram.py
src/job_intake/config/: settings.py
src/job_intake/models/: __init__.py  job.py
src/job_intake/review/: report.py
src/job_intake/scoring/: llm.py  pre_score.py  tiering.py
src/job_intake/storage/: database.py  dedup.py  models.py  repository.py
src/job_intake/utils/: http.py  logging.py  text.py
src/job_intake_mvp.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_dedup.py  test_rules_engine.py
